# ssb64-ai

./: README.md  memory-addresses.txt
comet-ai/: Gym.py  main.py
emulator/: .gitignore  CMakeLists.txt
emulator/SDL2-2.0.10/: CMakeLists.txt
emulator/SDL2-2.0.10/src/events/: SDL_touch_c.h
emulator/cmake/modules/: FindSamplerate.cmake  FindSpeexDSP.cmake
emulator/m64pai/: CMakeLists.txt
emulator/m64pai/data/config/: mupen64plus.cfg
emulator/m64pai/data/scripts/: run_game.py
emulator/m64pai/include/: m64pai_module.h  m64pai_ssb64_memory.h  m64pai_type_Controller.h  m64pai_type_Emulator.h  m64pai_type_Fighter.h  m64pai_type_Fighter_CaptainFalcon.h  m64pai_type_Fighter_DonkeyKong.h  m64pai_type_Fighter_Fox.h  m64pai_type_Fighter_Jigglypuff.h  m64pai_type_Fighter_Kirby.h  m64pai_type_Fighter_Link.h  m64pai_type_Fighter_Luigi.h  m64pai_type_Fighter_Mario.h  m64pai_type_Fighter_Ness.h  m64pai_type_Fighter_Pikachu.h  m64pai_type_Fighter_Samus.h  m64pai_type_Fighter_Yoshi.h  m64pai_type_Plugin.h  m64pai_type_Plugin_CuckedInputPlugin.h  m64pai_type_SSB64.h  m64pai_type_Stage.h  m64pai_type_Stage_DreamLand.h  m64pai_type_Stage_HyruleCastle.h  m64pai_type_Stage_KongoJungle.h  m64pai_type_Stage_MushroomKingdom.h  m64pai_type_Stage_PeachsCastle.h  m64pai_type_Stage_PlanetZebes.h  m64pai_type_Stage_SaffronCity.h  m64pai_type_Stage_SectorZ.h  m64pai_type_Stage_YoshisIsland.h  osal_dynamiclib.h
emulator/m64pai/python/: run_game.py
emulator/m64pai/src/: m64pai_module.c  m64pai_ssb64_memory.c  m64pai_type_Controller.c  m64pai_type_Emulator.c  m64pai_type_Fighter.c  m64pai_type_Fighter_CaptainFalcon.c  m64pai_type_Fighter_DonkeyKong.c  m64pai_type_Fighter_Fox.c  m64pai_type_Fighter_Jigglypuff.c  m64pai_type_Fighter_Kirby.c  m64pai_type_Fighter_Link.c  m64pai_type_Fighter_Luigi.c  m64pai_type_Fighter_Mario.c  m64pai_type_Fighter_Ness.c  m64pai_type_Fighter_Pikachu.c  m64pai_type_Fighter_Samus.c  m64pai_type_Fighter_Yoshi.c  m64pai_type_Plugin.c  m64pai_type_Plugin_CuckedInputPlugin.c  m64pai_type_SSB64.c  m64pai_type_Stage.c  m64pai_type_Stage_DreamLand.c  m64pai_type_Stage_HyruleCastle.c  m64pai_type_Stage_KongoJungle.c  m64pai_type_Stage_MushroomKingdom.c  m64pai_type_Stage_PeachsCastle.c  m64pai_type_Stage_PlanetZebes.c  m64pai_type_Stage_SaffronCity.c  m64pai_type_Stage_SectorZ.c  m64pai_type_Stage_YoshisIsland.c
emulator/m64pai/templates/: __init__.py.in  m64pai_types_list.h.in
emulator/m64py/data/: InputAutoCfg.ini  mupen64plus.cfg  mupen64plus.ini
emulator/m64py/data/savestates/: pika-vs-pika_dreamland.m64savestate  pika-vs-pika_dreamland_ai.m64savestate
emulator/m64py/include/: .m64py_ssb64_memory.h.kate-swp  m64py_module.h  m64py_ssb64_memory.h  m64py_type_Controller.h  m64py_type_Emulator.h  m64py_type_Fighter.h  m64py_type_Fighter_CaptainFalcon.h  m64py_type_Fighter_DonkeyKong.h  m64py_type_Fighter_Fox.h  m64py_type_Fighter_Jigglypuff.h  m64py_type_Fighter_Kirby.h  m64py_type_Fighter_Link.h  m64py_type_Fighter_Luigi.h  m64py_type_Fighter_Mario.h  m64py_type_Fighter_Ness.h  m64py_type_Fighter_Pikachu.h  m64py_type_Fighter_Samus.h  m64py_type_Fighter_Yoshi.h  m64py_type_Plugin.h  m64py_type_Plugin_CuckedInputPlugin.h  m64py_type_Plugin_CuckedPlugin.h  m64py_type_SSB64.h  m64py_type_Stage.h  m64py_type_Stage_DreamLand.h  m64py_type_Stage_HyruleCastle.h  m64py_type_Stage_KongoJungle.h  m64py_type_Stage_MushroomKingdom.h  m64py_type_Stage_PeachsCastle.h  m64py_type_Stage_PlanetZebes.h  m64py_type_Stage_SaffronCity.h  m64py_type_Stage_SectorZ.h  m64py_type_Stage_YoshisIsland.h
emulator/m64py/python/: run_game.py
emulator/m64py/src/: m64py.c  m64py_module.c  m64py_ssb64.c  m64py_ssb64_memory.c  m64py_type_Controller.c  m64py_type_Emulator.c  m64py_type_Fighter.c  m64py_type_Fighter_CaptainFalcon.c  m64py_type_Fighter_DonkeyKong.c  m64py_type_Fighter_Fox.c  m64py_type_Fighter_Jigglypuff.c  m64py_type_Fighter_Kirby.c  m64py_type_Fighter_Link.c  m64py_type_Fighter_Luigi.c  m64py_type_Fighter_Mario.c  m64py_type_Fighter_Ness.c  m64py_type_Fighter_Pikachu.c  m64py_type_Fighter_Samus.c  m64py_type_Fighter_Yoshi.c  m64py_type_Plugin.c  m64py_type_Plugin_CuckedInputPlugin.c  m64py_type_Plugin_CuckedPlugin.c  m64py_type_SSB64.c  m64py_type_Stage.c  m64py_type_Stage_DreamLand.c  m64py_type_Stage_HyruleCastle.c  m64py_type_Stage_KongoJungle.c  m64py_type_Stage_MushroomKingdom.c  m64py_type_Stage_PeachsCastle.c  m64py_type_Stage_PlanetZebes.c  m64py_type_Stage_SaffronCity.c  m64py_type_Stage_SectorZ.c  m64py_type_Stage_YoshisIsland.c  osal_dynamiclib_unix.c
emulator/mupen64plus-audio-sdl/: CMakeLists.txt
emulator/mupen64plus-audio-sdl/src/: main.c
emulator/mupen64plus-audio-sdl/src/resamplers/: trivial.c
emulator/mupen64plus-core/: CMakeLists.txt  mupen64plus-core.kdev4
emulator/mupen64plus-core/.kdev4/: mupen64plus-core.kdev4
emulator/mupen64plus-core/src/api/: ai.c  ai.h  api_export.ver  config.c  frontend.c  m64p_ai.h  vidext.c  vidext_sdl2_compat.h
emulator/mupen64plus-core/src/asm_defines/: asm_defines_gas.h  asm_defines_nasm.h
emulator/mupen64plus-core/src/debugger/: dbg_breakpoints.c  dbg_debugger.c  dbg_memory.c
emulator/mupen64plus-core/src/device/controllers/paks/: biopak.c
emulator/mupen64plus-core/src/main/: cheat.c  eventloop.c  main.c  savestates.c  screenshot.c  sdl_key_converter.h  workqueue.c
emulator/mupen64plus-core/subprojects/oglft/: OGLFT.h
emulator/mupen64plus-input-ai-cuck/: CMakeLists.txt
emulator/mupen64plus-input-ai-cuck/src/: osal_dynamiclib_unix.c  plugin.c  plugin.h  version.h
emulator/mupen64plus-input-sdl/: CMakeLists.txt
emulator/mupen64plus-input-sdl/src/: autoconfig.c  plugin.c
emulator/mupen64plus-rsp-hle/: CMakeLists.txt
emulator/mupen64plus-video-glide64mk2/: CMakeLists.txt
emulator/mupen64plus-video-glide64mk2/src/Glide64/: Ini.cpp  Main.cpp
